--- a/index.css
+++ b/index.css
@@ -101,7 +101,9 @@ nav ul li a:hover:after{
     margin-top: 25px;
     margin-bottom: 30px;
 }
-
+body{
+    background-image:url(s.j.jpg) ;
+}
 
 
 
